--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ a img:hover {
 
 }
 .nav {
+    z-index: 9999;
     position: absolute;
     top: 0;
     left: 0;
